# RAG

./: .gitignore  LICENSE  main.py  pyproject.toml  requeriment.txt  requirements.txt
app/: main.py
app/config/: settings.py
