[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [
    {name = "TheRonnieSouza",email = "ronniesouza.contato@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "langsmith (>=0.6.6,<0.7.0)",
    "google-genai (>=1.60.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
